<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/destHeading_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/destHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_heading"
                android:inputType="none"
                android:focusable="false"
                android:text="@string/true_magnetic"
                android:textStyle="bold"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/destDistance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/destDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_distance"
                android:inputType="none"
                android:focusable="false"
                android:text="@string/paces"
                android:textStyle="bold"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:id="@+id/headingNew_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/headingNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_heading"
                android:selectAllOnFocus="true"
                android:inputType="numberSigned|numberDecimal"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/truemag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/distanceNew_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/distanceNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_distance"
                android:selectAllOnFocus="true"
                android:inputType="numberSigned|numberDecimal"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/paces_feet_meters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#0f0"
            android:text="@string/update_position"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/paceDistance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/paceDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance_one_pace"
                android:selectAllOnFocus="true"
                android:text="@string/default_pace"
                android:inputType="numberSigned|numberDecimal"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/pace_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/declination_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/declination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/magnetic_declination"
                android:selectAllOnFocus="true"
                android:text="@string/zero"
                android:inputType="numberSigned|numberDecimal"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/waypoints_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/waypoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/waypoints"
                android:selectAllOnFocus="true"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/clear_waypoints" />

    </LinearLayout>
</ScrollView>
